--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,6 @@
 version: 2
 jobs:
   build:
-     branches:
-      only:
-        - develop
     docker:
       # specify the version you desire here
        - image: circleci/ruby:2.5.1-node-browsers
@@ -47,3 +44,8 @@ jobs:
       - store_artifacts:
           path: /tmp/test-results
           destination: test-results
+
+general:
+  branches:
+    only:
+     - develop # list of branches to build
